--- a/LaTeX/refs.bib
+++ b/LaTeX/refs.bib
@@ -41,7 +41,21 @@ archivePrefix = {arXiv},
 
 @MASTERSTHESIS{tesi,
   AUTHOR = {Chiara Manzoli},
-  TITLE = {Il metodo di Newton e le sue varianti per sistemi di equazioni non lineari},
+  TITLE = {Il metodo di Newton e le sue varianti per sistemi di equazioni
+		   non lineari},
   SCHOOL = {Università di Bologna, corso di Laurea in Matematica},
   YEAR =  {2015},
+}
+
+@software{lmfit,
+	author = {Newville, Matthew and Stensitzki, Till and Allen, Daniel B. and
+			 	Ingargiola, Antonino},
+	title = {Calculation of confidence intervals, {LMFIT: Non-Linear
+			Least-Square Minimization and Curve-Fitting for Python}},
+	month = sep,
+	year = 2014,
+	publisher = {Zenodo},
+	version = {0.8.0},
+	doi = {10.5281/zenodo.11813},
+	url = {https://lmfit.github.io/lmfit-py/confidence.html}
 }
