Correzione Var(my) in app. B

--- a/LaTeX/diodo.tex
+++ b/LaTeX/diodo.tex
@@ -581,7 +581,7 @@ e ampiezze diverse:
 %	\frac{e^{-\frac{(x-x_i)^2}{\sigma_x^2}}} {\sigma_x \sqrt{2 \pi}}
 %	} {\sqrt{2 \pi}} =\\ 
 	\var{\mu_y} &= \sum_{i=1}^{n} w_i^2 \sigma_y^2 + 
-	\left(\frac{y_i}{\sum_{j=1}^{n} w_j} \right)^2 \frac{
+	\left(\frac{y_i}{\sum_{j=1}^{n} G_{x_j}} \right)^2 \frac{
 	e^{-\frac{(x-x_i)^2}{3 \sigma_{x_i}^2}} +  
 	\sqrt{3} \left( e^{-\frac{(x-x_i)^2}{\sigma_{x_i}^2}} -
 	\sqrt{2} e^{-3 \frac{(x-x_i)^2}{4 \sigma_{x_i}^2}} \right)
