--- a/LaTeX/refs.bib
+++ b/LaTeX/refs.bib
@@ -4,12 +4,14 @@
 	TITLE = {Arduino: Open-source electronic prototyping platform},
 	ADDRESS = {Ivrea, Italy}
 }
+
 @electronic{teensy,
 	URL = {https://www.pjrc.com/teensy/teensy31.html},
-	AUTHOR = {Paul Stoffregen, others},
+	AUTHOR = {Paul Stoffregen and others},
 	TITLE = {Teensy 3.2 Development Board},
 	ADDRESS = {Sherwood, Oregon, USA}
 }
+
 @ARTICLE{scipy,
        author = {{Virtanen}, Pauli and {Gommers}, Ralf and {Oliphant},
          Travis E. and {Haberland}, Matt and {Reddy}, Tyler and
@@ -38,24 +40,10 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-
 @MASTERSTHESIS{tesi,
   AUTHOR = {Chiara Manzoli},
   TITLE = {Il metodo di Newton e le sue varianti per sistemi di equazioni
 		   non lineari},
   SCHOOL = {Università di Bologna, corso di Laurea in Matematica},
   YEAR =  {2015},
-}
-
-@software{lmfit,
-	author = {Newville, Matthew and Stensitzki, Till and Allen, Daniel B. and
-			 	Ingargiola, Antonino},
-	title = {Calculation of confidence intervals, {LMFIT: Non-Linear
-			Least-Square Minimization and Curve-Fitting for Python}},
-	month = sep,
-	year = 2014,
-	publisher = {Zenodo},
-	version = {0.8.0},
-	doi = {10.5281/zenodo.11813},
-	url = {https://lmfit.github.io/lmfit-py/confidence.html}
 }
